test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/plx1_pub_param_1.plx
# A function parameter cannot have a storage class
pub fn f(pub i: i32) i32 {
    return i
}

pub fn main(none) i32 {
    return f(1)
}
